# ver

./: .gitignore  CMakeLists.txt  Makefile  README.md  convert.sh
assets/: .gitignore  bunny.ply
demo/: ver.js  ver.wasm
docs/: .gitignore  PathTracer.tex  PhotonMapper.tex  hotreload.sh  index.html  report.bib  ver.js  ver.wasm
include/: kdtree.h
src/: camera.hh  film.cc  film.hh  geometry.cc  geometry.hh  interaction.hh  lights.hh  material.cc  material.hh  primitive.cc  primitive.hh  scene.hh  scenes.hh  shape.cc  shape.hh  spectrum.hh  texture.cc  texture.hh  ver.cc  ver.hh  viewer.cc  viewer.hh
src/accelerators/: bvh.cc  bvh.hh  kdtree.h
src/algorithms/: pathtracer.cc  pathtracer.hh  photonmapper.cc  photonmapper.hh
src/image/: film.cc  film.hh  framebuffer.cc  framebuffer.hh  io.cc  io.hh  tonemap.cc  tonemap.hh
src/integrators/: pathtracer.cc  pathtracer.hh  photonmapper.cc  photonmapper.hh
src/io/: io.cc  simply.cc  simply.hh
src/materials/: BSDF.hh  BxDF.hh  material.cc  material.hh  slides.cc  slides.hh  tex.cc  tex.hh
src/shapes/: primitive.cc  primitive.hh  quad.cc  quad.hh  shape.cc  shape.hh  sphere.cc  sphere.hh  triangle.cc  triangle.hh
src/tonemap/: tonemap.cc  tonemap.hh
src/utils/: argparse.cc  argparse.hh  lwpb.hh  random.cc  random.hh  simply.cc  simply.hh  time.cc  time.hh
